--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   
 
   <script src="vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/js/PixelPainter.js"></script>
+  <script src="js/PixelPainter.js"></script>
 
 </body>
 </html>
